workspace-sf/force-app/main/default/objects/Franquia__c/Franquia__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro das franquias</description>
    <label>Franquia</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Franquias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>