workspace-sf/force-app/main/default/objects/Franquia__c/fields/CodigoFranquia__c.field-meta.xml
<CustomField>
    <fullName>CodigoFranquia__c</fullName>
    <externalId>true</externalId>
    <label>Código da Franquia</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>