workspace-sf/force-app/main/default/objects/Franquia__c/fields/LimiteMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximo__c</fullName>
    <label>Limite máximo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>