workspace-sf/force-app/main/default/objects/Franquia__c/fields/LimiteMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimo__c</fullName>
    <label>Limite mínimo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>