workspace-sf/force-app/main/default/objects/Franquia__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <label>Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simples</fullName>
            </value>
            <value>
                <fullName>Dedutível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>