workspace-sf/force-app/main/default/objects/Franquia__c/validationRules/ValidarTipoDiasLimiteMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTipoDiasLimiteMaximo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    ISPICKVAL(Tipo__c, &quot;Dias&quot;), 
    OR(
       CONTAINS( LimiteMaximo__c  , &quot;,&quot;),
       NOT(ISNUMBER( LimiteMaximo__c ))
    )
 )</errorConditionFormula>
    <errorMessage>Se o Tipo selecionado for Dias, não inserir Limite mínimo com casas decimais.</errorMessage>
</ValidationRule>