workspace-sf/force-app/main/default/objects/Franquia__c/validationRules/ValidarTipoDiasLimiteMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTipoDiasLimiteMinimo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Tipo__c, &quot;Dias&quot;), 
OR( 
CONTAINS( LimiteMinimo__c , &quot;,&quot;), 
NOT(ISNUMBER( LimiteMinimo__c )) 
) 
)</errorConditionFormula>
    <errorMessage>Se o Tipo selecionado for Dias, não inserir Limite mínimo com casas decimais.</errorMessage>
</ValidationRule>