workspace-sf/force-app/main/default/objects/Franquia__c/validationRules/ValidarTipoValorLimiteMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTipoValorLimiteMaximo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 	
   ISPICKVAL(Tipo__c, &quot;Valor&quot;), 	
   NOT AND ( 
      CONTAINS( LimiteMaximo__c , &quot;,&quot;), 		
      REGEX( MID( LimiteMaximo__c , 0, FIND(&quot;,&quot;, LimiteMaximo__c ) - 1), &quot;^[0-9]*$&quot;), 		
      REGEX( MID( LimiteMaximo__c , FIND(&quot;,&quot;, LimiteMaximo__c) + 1 , LEN( LimiteMaximo__c ) ) , &quot;^[0-9]{2}&quot;) 		 
            ) 
)</errorConditionFormula>
    <errorMessage>Se o Tipo selecionado for Valor, inserir números no campo Limite máximo com casas decimais.</errorMessage>
</ValidationRule>