workspace-sf/force-app/main/default/objects/Franquia__c/validationRules/ValidarTipoValorLimiteMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarTipoValorLimiteMinimo</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 	
   ISPICKVAL(Tipo__c, &quot;Valor&quot;), 	
   NOT AND ( 
      CONTAINS( LimiteMinimo__c  , &quot;,&quot;), 		
      REGEX( MID( LimiteMinimo__c  , 0, FIND(&quot;,&quot;, LimiteMinimo__c ) - 1), &quot;^[0-9]*$&quot;), 		
      REGEX( MID( LimiteMinimo__c , FIND(&quot;,&quot;, LimiteMinimo__c) + 1 , LEN( LimiteMinimo__c  ) ) , &quot;^[0-9]{2}&quot;) 		 
            ) 
)</errorConditionFormula>
    <errorMessage>Se o Tipo selecionado for Valor, inserir números no campo Limite mínimo com casas decimais.</errorMessage>
</ValidationRule>