workspace-sf/force-app/main/default/objects/Franquia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo__c</columns>
    <columns>Modelo__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as franquias</label>
</ListView>